terraform/modules/security_groups/main.tf
resource "aws_security_group" "allow_all" {
  name        = "allow-all"
  description = "Allow all traffic"
  vpc_id      = var.vpc_id  # Reference to the vpc_id variable

  // Inbound rules
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Outbound rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

// Additional security groups can be defined similarly
